--- a/src/ui/Common/Loading/Loading.module.css
+++ b/src/ui/Common/Loading/Loading.module.css
@@ -11,3 +11,17 @@
     left: 50%;
     top: 30%;
 }
+.loaderWrapper {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.load {
+    position: absolute;
+    z-index: 10000;
+    background-color: #00000061;
+    width: 100%;
+    height: 100%;
+}
