--- a/src/ui/Common/Loading/Loading.module.css
+++ b/src/ui/Common/Loading/Loading.module.css
@@ -19,9 +19,10 @@
 }
 
 .load {
-    position: absolute;
+    position: fixed;
     z-index: 10000;
     background-color: #00000061;
     width: 100%;
     height: 100%;
+    /* overflow: hidden; */
 }
